--- a/cybersec.html
+++ b/cybersec.html
@@ -28,8 +28,9 @@
 
     <div id="main" class="container mx-auto">
         <h2 class="text-3xl underline">Computer & Security Journal</h2>
-        <table id="papers_table" class="display"></table>
+        <div id="topics"></div>
 
+        <table id="papers_table" class="display"></table>
         <hr/>
 
     </div>
