--- a/acm-surveys.html
+++ b/acm-surveys.html
@@ -27,7 +27,7 @@
   <body>
 
     <div id="main" class="container mx-auto">
-        <h2 class="text-3xl underline">Computer & Security Journal</h2>
+        <h2 class="text-3xl underline">ACM Surveys</h2>
         <div id="topics"></div>
 
         <table id="papers_table" class="display"></table>
@@ -36,7 +36,7 @@
     </div>
 
     <script type="module">
-      import {init} from "./scripts/cybersec.js"
+      import {init} from "./scripts/acm-surveys.js"
 
       $(document).ready(async function () {
         await init();
