--- a/com-and-sec.html
+++ b/com-and-sec.html
@@ -26,25 +26,17 @@
   </head>
   <body>
 
-    <a href="./datasets.html">datasets</a>
-    <a href="./com-and-sec.html">computer & security</a>
-    <a href="./acm-surveys.html">ACM surveys</a>
-
     <div id="main" class="container mx-auto">
-        <h2 class="text-3xl underline">Papers</h2>
+        <h2 class="text-3xl underline">Computer & Security Journal</h2>
+        <div id="topics"></div>
+
         <table id="papers_table" class="display"></table>
-
         <hr/>
-
-        <h2 class="text-3xl underline">SCVD GNN</h2>
-        <div id="scvd-graph" class="graph"></div>
-
-        
 
     </div>
 
     <script type="module">
-      import {init} from "./scripts/index.js"
+      import {init} from "./scripts/com-and-sec.js"
 
       $(document).ready(async function () {
         await init();
