--- a/bounty.html
+++ b/bounty.html
@@ -25,40 +25,18 @@
     <title>Viz</title>
   </head>
   <body>
-    <ul class="flex container mx-auto">
-      <li class="mr-6">
-        <a class="text-blue-500 hover:text-blue-800" href="./datasets.html">datasets</a>
-      </li>
-      <li class="mr-6">
-        <a class="text-blue-500 hover:text-blue-800" href="./cybersec.html">Cyber Security</a>
-      </li>
-      <li class="mr-6">
-        <a class="text-blue-500 hover:text-blue-800" href="./bounty.html">Bounty</a>
-      </li>
-      
-      <li class="mr-6">
-        <a class="text-blue-500 hover:text-blue-800" href="./com-and-sec.html">Com & Sec (J)</a>
-      </li>
-      <li class="mr-6">
-        <a class="text-blue-500 hover:text-blue-800" href="./acm-surveys.html">ACM surveys (J)</a>
-      </li>
-    </ul>
 
     <div id="main" class="container mx-auto">
-        <h2 class="text-2xl underline">papers</h2>
+        <h2 class="text-2xl underline">Bug Bounty</h2>
+        <div id="topics"></div>
+
         <table id="papers_table" class="display"></table>
-
         <hr/>
-
-        <h2 class="text-2xl underline">SCVD GNN</h2>
-        <div id="scvd-graph" class="graph"></div>
-
-        
 
     </div>
 
     <script type="module">
-      import {init} from "./scripts/index.js"
+      import {init} from "./scripts/bounty.js"
 
       $(document).ready(async function () {
         await init();
