--- a/sc-kg.html
+++ b/sc-kg.html
@@ -30,14 +30,18 @@
     <div id="main" class="container mx-auto">
         <h1 class="text-4xl underline">Smart Contract Knowledge Graph</h1>
 
+        <a href="./projects/silo-25-01.html">Silo Finance 25-01</a>
+
         <br/>
 
         <h2 class="text-3xl underline">papers</h2>
         <table id="papers_table" class="display"></table>
 
         <hr/>
+        <h2 class="text-2xl underline">graph</h2>
+        <div id="sckg-graph" class="graph"></div>
 
-        <a href="./projects/silo-25-01.html">Silo Finance 25-01</a>
+        <hr/>
 
     </div>
 
