--- a/bounty.html
+++ b/bounty.html
@@ -30,6 +30,12 @@
         <h2 class="text-2xl underline">Bug Bounty</h2>
         <div id="topics"></div>
 
+        <div>Bug Bounty Platforms: Open-Sourced Collection of Bug Bounty Platforms</div>
+        <div>https://github.com/disclose/bug-bounty-platforms</div>
+
+        <div>public bugbounty programs</div>
+        <div>https://github.com/projectdiscovery/public-bugbounty-programs</div>
+
         <table id="papers_table" class="display"></table>
         <hr/>
 
