--- a/datasets.html
+++ b/datasets.html
@@ -29,6 +29,9 @@
       <li class="mr-6">
         <a class="text-blue-500 hover:text-blue-800" href="./dappscan.html">dappscan</a>
       </li>
+      <li class="mr-6">
+        <a class="text-blue-500 hover:text-blue-800" href="./code4renas.html">code4renas</a>
+      </li>
     </ul>
 
     <div id="main" class="container mx-auto">
