--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
       <li class="mr-6">
         <a class="text-blue-500 hover:text-blue-800" href="./bounty.html">Bounty</a>
       </li>
+      <li class="mr-6">
+        <a class="text-blue-500 hover:text-blue-800" href="./ckc.html">Cyber kill chain</a>
+      </li>
       
       <li class="mr-6">
         <a class="text-blue-500 hover:text-blue-800" href="./com-and-sec.html">Com & Sec (J)</a>
