--- a/cybersec.html
+++ b/cybersec.html
@@ -26,6 +26,12 @@
   </head>
   <body>
 
+    <ul class="flex container mx-auto">
+      <li class="mr-6">
+        <a class="text-blue-500 hover:text-blue-800" href="./cybersec-tertiary.html">tierary</a>
+      </li>
+    </ul>
+
     <div id="main" class="container mx-auto">
         <h2 class="text-2xl underline">Cyber Security</h2>
         <div id="topics"></div>
