--- a/pages/concepts.html
+++ b/pages/concepts.html
@@ -22,23 +22,41 @@
         }
     </style>
 
-    <title>Viz</title>
+    <title>Viz - Concepts</title>
   </head>
   <body>
-
     
 
     <div id="main" class="container mx-auto">
-        <h2 class="text-2xl underline">Cyber Security</h2>
-        <div id="topics"></div>
+        <h1 class="text-4xl underline">Concepts</h1>
 
-        <table id="books_table" class="display"></table>
+        <br/>
+
+        <h2 class="text-2xl underline">concepts</h2>
+        <table id="concepts_table" class="display"></table>
+
+        <hr/>
+        <h2 class="text-2xl underline">projects</h2>
+        <div>RAAC</div>
+        <div>TermMax</div>
+        
+        <div>Liquidity Management</div>
+        <div>DexLyn SCA</div>
+        <div>LiFi</div>
+
+        <div>OpenVM</div>
+        <div>FarcasterAttestation</div>
+
+        <!-- <hr/>
+        <h2 class="text-2xl underline">graph</h2>
+        <div id="sckg-graph" class="graph"></div> -->
+
         <hr/>
 
     </div>
 
     <script type="module">
-      import {init} from "./scripts/cybersec.js"
+      import {init} from "./scripts/concepts.js"
 
       $(document).ready(async function () {
         await init();
