--- a/projects.html
+++ b/projects.html
@@ -22,23 +22,25 @@
         }
     </style>
 
-    <title>Viz</title>
+    <title>Viz - Concepts</title>
   </head>
   <body>
-
     
 
     <div id="main" class="container mx-auto">
-        <h2 class="text-2xl underline">Cyber Security</h2>
-        <div id="topics"></div>
+        <h1 class="text-4xl underline">projects</h1>
 
-        <table id="books_table" class="display"></table>
+        <br/>
+
+        <h2 class="text-2xl underline">projects</h2>
+        <table id="projects_table" class="display"></table>
+
         <hr/>
 
     </div>
 
     <script type="module">
-      import {init} from "./scripts/cybersec.js"
+      import {init} from "./scripts/projects.js"
 
       $(document).ready(async function () {
         await init();
