--- a/index.html
+++ b/index.html
@@ -27,44 +27,48 @@
   <body>
     <ul class="flex container mx-auto">
       <li class="mr-6">
-        <a class="text-blue-500 hover:text-blue-800" href="./sc-kg.html">sc-kg</a>
-      </li>
-      <li class="mr-6">
-        <a class="text-blue-500 hover:text-blue-800" href="./sc-vul.html">sc-vul</a>
-      </li>
-      <li class="mr-6">
-        <a class="text-blue-500 hover:text-blue-800" href="./datasets.html">datasets</a>
+        <a class="text-blue-500 hover:text-blue-800" href="./projects.html">Projects</a>
       </li>
       <li class="mr-6">
         <a class="text-blue-500 hover:text-blue-800" href="./cybersec.html">Cyber Security</a>
       </li>
-      <li class="mr-6">
-        <a class="text-blue-500 hover:text-blue-800" href="./bounty.html">Bounty</a>
+
+      <!-- <li class="mr-6">
+        <a class="text-blue-500 hover:text-blue-800" href="./pages/sc-kg.html">sc-kg</a>
       </li>
       <li class="mr-6">
-        <a class="text-blue-500 hover:text-blue-800" href="./ckc.html">Cyber kill chain</a>
+        <a class="text-blue-500 hover:text-blue-800" href="./pages/sc-vul.html">sc-vul</a>
+      </li>
+      <li class="mr-6">
+        <a class="text-blue-500 hover:text-blue-800" href="./pages/datasets.html">datasets</a>
+      </li>
+      <li class="mr-6">
+        <a class="text-blue-500 hover:text-blue-800" href="./pages/bounty.html">Bounty</a>
+      </li>
+      <li class="mr-6">
+        <a class="text-blue-500 hover:text-blue-800" href="./pages/ckc.html">Cyber kill chain</a>
       </li>
       
       <li class="mr-6">
-        <a class="text-blue-500 hover:text-blue-800" href="./com-and-sec.html">Com & Sec (J)</a>
+        <a class="text-blue-500 hover:text-blue-800" href="./pages/com-and-sec.html">Com & Sec (J)</a>
       </li>
       <li class="mr-6">
-        <a class="text-blue-500 hover:text-blue-800" href="./acm-surveys.html">ACM surveys (J)</a>
+        <a class="text-blue-500 hover:text-blue-800" href="./pages/acm-surveys.html">ACM surveys (J)</a>
       </li>
 
       <li class="mr-6">
-        <a class="text-blue-500 hover:text-blue-800" href="./viz-graph.html">viz graph</a>
-      </li>
+        <a class="text-blue-500 hover:text-blue-800" href="./pages/viz-graph.html">viz graph</a>
+      </li> -->
     </ul>
 
     <div id="main" class="container mx-auto">
-        <h2 class="text-2xl underline">papers</h2>
+        <!-- <h2 class="text-2xl underline">papers</h2>
         <table id="papers_table" class="display"></table>
 
         <hr/>
 
         <h2 class="text-2xl underline">SCVD GNN</h2>
-        <div id="scvd-graph" class="graph"></div>
+        <div id="scvd-graph" class="graph"></div> -->
 
         
 
