--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
         <a class="text-blue-500 hover:text-blue-800" href="./recon.html">Recon</a>
       </li>
 
+      <li class="mr-6">
+        <a class="text-blue-500 hover:text-blue-800" href="./exchanges.html">Exchanges</a>
+      </li>
+
       <!-- <li class="mr-6">
         <a class="text-blue-500 hover:text-blue-800" href="./pages/sc-kg.html">sc-kg</a>
       </li>
@@ -74,34 +78,6 @@
         <h2 class="text-2xl underline">SCVD GNN</h2>
         <div id="scvd-graph" class="graph"></div> -->
 
-        <div>
-          ATT&CK :
-Reconnaissance,	
-Resource Development,	
-Initial Access,	
-Execution,	
-Persistence,	
-Privilege Escalation,	
-Defense Evasion,	
-Credential Access,	
-Discovery,	
-Lateral Movement,	
-Collection,	
-Command and Control,	
-Exfiltration,	
-Impact
-        </div>
-
-        <div>
-          Cyber Kill Chain :
-Reconnaissance
-Weaponization
-Delivery
-Exploitation
-Installation
-C & C
-Action on Objectives
-        </div>
 
     </div>
 
