--- a/projects.html
+++ b/projects.html
@@ -35,10 +35,17 @@
       <div id="main" class="container px-6">
 
         <br/>
+        
+        <h2 class="text-2xl underline">Valuit</h2>
+        <pre>TODO</pre>
+
+        <br/><hr/><br/>
 
         <h2 class="text-2xl underline">Velvet</h2>
         <pre>TODO</pre>
         <!-- <div id="velvet-graph" class="graph"></div> -->
+
+        <br/><hr/><br/>
 
         <h2 class="text-2xl underline">Hesty</h2>
 <pre class="mermaid">
