--- a/index.html
+++ b/index.html
@@ -30,9 +30,12 @@
         <a class="text-blue-500 hover:text-blue-800" href="./projects.html">Projects</a>
       </li>
       <li class="mr-6">
-        <a class="text-blue-500 hover:text-blue-800" href="./cybersec.html">Cyber Security</a>
+        <a class="text-blue-500 hover:text-blue-800" href="./tools.html">Tools</a>
       </li>
 
+      <li class="mr-6">
+        <a class="text-blue-500 hover:text-blue-800" href="./kd.html">KD</a>
+      </li>
       <li class="mr-6">
         <a class="text-blue-500 hover:text-blue-800" href="./recon.html">Recon</a>
       </li>
@@ -56,6 +59,10 @@
       <li class="mr-6">
         <a class="text-blue-500 hover:text-blue-800" href="./pages/ckc.html">Cyber kill chain</a>
       </li>
+
+      <li class="mr-6">
+        <a class="text-blue-500 hover:text-blue-800" href="./cybersec.html">Cyber Security</a>
+      </li>
       
       <li class="mr-6">
         <a class="text-blue-500 hover:text-blue-800" href="./pages/com-and-sec.html">Com & Sec (J)</a>
@@ -69,14 +76,12 @@
       </li> -->
     </ul>
 
+    <br/><hr/><br/>
+
     <div id="main" class="container mx-auto">
-        <!-- <h2 class="text-2xl underline">papers</h2>
-        <table id="papers_table" class="display"></table>
 
-        <hr/>
-
-        <h2 class="text-2xl underline">SCVD GNN</h2>
-        <div id="scvd-graph" class="graph"></div> -->
+        <h2 class="text-2xl underline">books</h2>
+        <table id="books_table" class="display"></table>
 
 
     </div>
