--- a/recon.html
+++ b/recon.html
@@ -29,15 +29,32 @@
     
 
     <div id="main" class="container mx-auto">
-        <!-- <h2 class="text-2xl underline">Reconnaissance/Intelligence</h2> -->
         
+        <h1 class="text-2xl underline">Network Exploration</h1>
+        <div>
+          <h1 class="text-xl underline">DNS</h1>
 
-        <table id="recon_table" class="display"></table>
-        <hr/>
+          <div>dig</div>
+          <div>whois</div>
+          <div>dorks</div>
+          <div>dnsdumpster</div>
+          <div>censys</div>
+          <div>fierce</div>
+          <div>sublist3r</div>
+          <div>enumall</div>
+
+        </div>
+
+        <br/><hr/><br/>
+
+        <h1 class="text-2xl underline">Web Exploration</h1>
+        <div></div>
+
+        <br/><hr/><br/>
 
         <div>
 
-          <h1 class="text-3xl underline">Survey and Taxonomy of Adversarial Reconnaissance Techniques</h1>
+          <h1 class="text-2xl underline">Survey and Taxonomy of Adversarial Reconnaissance Techniques</h1>
 
           <img src ="https://ai2-s2-public.s3.amazonaws.com/figures/2017-08-08/08136dddf8f377ad37e96fdd302ac51969420503/15-Figure3-1.png"/>
 
