--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
         <a class="text-blue-500 hover:text-blue-800" href="./projects.html">Projects</a>
       </li>
       <li class="mr-6">
+        <a class="text-blue-500 hover:text-blue-800" href="./c4r.html">c4r</a>
+      </li>
+      <li class="mr-6">
         <a class="text-blue-500 hover:text-blue-800" href="./tools.html">Tools</a>
       </li>
 
@@ -77,6 +80,8 @@
     </ul>
 
     <br/><hr/><br/>
+
+    <div>hackenproof: needyidk</div>
 
     <div id="main" class="container mx-auto">
 
