--- a/c4r.html
+++ b/c4r.html
@@ -33,7 +33,19 @@
 
     <div id="main" class="container px-6">
   
-    <a href="./c4r/2024-12-secondswap.html">2024-12-secondswap</a>
+    <!-- <a href="./c4r/2024-12-secondswap.html">2024-12-secondswap</a> -->
+    
+    <a href="./c4r/project.html?id=2024-12-secondswap">2024-12-secondswap</a> <br/>
+
+    <a href="./c4r/project.html?id=2024-05-bakerfi">2024-05-bakerfi</a> <br/>
+    <a href="./c4r/project.html?id=2024-05-predy">2024-05-predy</a> <br/>
+    <a href="./c4r/project.html?id=2024-06-size">2024-06-size</a> <br/>
+    <a href="./c4r/project.html?id=2024-06-vultisig">2024-06-vultisig</a> <br/>
+    <a href="./c4r/project.html?id=2024-07-reserve">2024-07-reserve</a> <br/>
+    <a href="./c4r/project.html?id=2024-08-basin">2024-08-basin</a> <br/>
+    <a href="./c4r/project.html?id=2024-08-wildcat">2024-08-wildcat</a> <br/>
+    <a href="./c4r/project.html?id=2024-11-ethena-labs">c4r/11-ethena-labs</a> <br/>
+    <a href="./c4r/project.html?id=2024-12-lambowin">2024-12-lambowin</a> <br/>
       
   </div>
 
