--- a/projects.html
+++ b/projects.html
@@ -192,7 +192,31 @@ Organizer           | An array which is only used for rearranging its elements a
 Other               | Any other variable.
 
 Roles of Variables in Object-Oriented Programming
+Roles of Variables in Three Programming Paradigms
 </pre>
+
+<br/><hr/><br/>
+
+<pre>
+Evaluating Beacons, the Role of Variables, Tracing, and Abstract Tracing for Teaching Novices to Understand Program Intent
+
+2 BACKGROUND
+  2.1 Plans & Plan Composition
+  2.2 Beacons
+  2.3 Role of Variables
+  2.4 (Concrete) Tracing
+  2.5 Abstract Tracing
+  2.6 Block Model
+
+6 DISCUSSION / CONCLUSION
+  6.1 Teach Students a Collection of Tools
+  6.2 Teach Students to Analyze the Code One Variable at a Time
+  6.3 Teach Students to Try to Disprove Their Hypothesis of What the Code Does
+  6.4 Teach Students to Perform Abstract Tracing
+    Our results are consistent with their findings and suggest the need for more abstract strategies, such as abstract tracing or algorithmic visualizations, to comprehend the relationship between variables / lines of code.
+
+</pre>
+
 
         <!-- <h2 class="text-2xl underline">temp</h2>
         <table id="projects_table" class="display"></table> -->
