--- a/recon.html
+++ b/recon.html
@@ -30,27 +30,16 @@
 
     <div id="main" class="container mx-auto">
         
-        <h1 class="text-2xl underline">Network Exploration</h1>
+        <h1 class="text-2xl underline">Tools</h1>
+        <table id="network_table" class="display"></table>
+
+        <br/><hr/><br/>
+
+
         <div>
-          <h1 class="text-xl underline">DNS</h1>
-
-          <div>dig</div>
-          <div>whois</div>
-          <div>dorks</div>
-          <div>dnsdumpster</div>
-          <div>censys</div>
-          <div>fierce</div>
-          <div>sublist3r</div>
-          <div>enumall</div>
-
+          reference:
+          <div>Hunting Cyber Criminals: A Hacker's Guide to Online Intelligence Gathering Tools and Techniques</div>
         </div>
-
-        <br/><hr/><br/>
-
-        <h1 class="text-2xl underline">Web Exploration</h1>
-        <div></div>
-
-        <br/><hr/><br/>
 
         <div>
 
