--- a/c4r/project.html
+++ b/c4r/project.html
@@ -42,6 +42,11 @@
 
       <br/><hr/><br/>
 
+      <h2 class="text-2xl underline">source units</h2>
+      <pre id="sus"></pre>
+
+      <br/><hr/><br/>
+
       <h2 class="text-2xl underline">contracts dependencies</h2>
       <pre id="contract_imports"></pre>
 
@@ -60,6 +65,9 @@
 
     <script type="module">
       import {init} from "./project.js";
+      import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@11/dist/mermaid.esm.min.mjs';
+
+      mermaid.initialize({ startOnLoad: false });
 
       $(document).ready(async function () {
         await init();
