--- a/project.html
+++ b/project.html
@@ -46,7 +46,7 @@
       import {init} from "./scripts/project.js"
       import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@11/dist/mermaid.esm.min.mjs';
 
-      mermaid.initialize({ startOnLoad: true });
+      mermaid.initialize({ startOnLoad: false });
 
       $(document).ready(async function () {
         await init();
