--- a/c4r/project.html
+++ b/c4r/project.html
@@ -34,8 +34,11 @@
 
       <h2 class="text-2xl underline" id="title"></h2>
       <pre class="mermaid" id="contracts"></pre>
-
       <br/><hr/><br/>
+
+      <!-- <pre class="mermaid" id="tokens"></pre>
+      <br/><hr/><br/> -->
+
 
       <h2 class="text-2xl underline">Issues</h2>
       <table id="issues_table" class="display"></table>
