--- a/projects.html
+++ b/projects.html
@@ -55,7 +55,10 @@
 
         <h2 class="text-2xl underline">
           <a href="./projects/hesty.html">Hesty</a>
-        </h2>        
+        </h2>
+        <h2 class="text-2xl underline">
+          <a href="./projects/project.html?id=hesty-contract">Hesty (new)</a>
+        </h2>
 
         <h2 class="text-2xl underline">
           <a href="./projects/k-bit.html">K-BIT</a>
