--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
         <a class="text-blue-500 hover:text-blue-800" href="./tools.html">Tools</a>
       </li>
       <li class="mr-6">
+        <a class="text-blue-500 hover:text-blue-800" href="./bounty.html">Bounty Programs</a>
+      </li>
+
+      
+      <li class="mr-6">
         <a class="text-blue-500 hover:text-blue-800" href="./kd.html">KD</a>
       </li>
 
