--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
       </li>
 
       <li class="mr-6">
+        <a class="text-blue-500 hover:text-blue-800" href="./acm-surveys.html">Surveys</a>
+      </li>
+      <li class="mr-6">
         <a class="text-blue-500 hover:text-blue-800" href="./tools.html">Tools</a>
       </li>
       <li class="mr-6">
