--- a/projects.html
+++ b/projects.html
@@ -59,7 +59,8 @@
 
         
         <h2 class="text-2xl underline">
-          <a href="./projects/k-bit.html">K-BIT - 4/7/2025</a>
+          <!-- <a href="./projects/k-bit.html">K-BIT - 4/7/2025</a> -->
+          <a href="./projects/project.html?id=k-bit">K-BIT - 4/7/2025</a>
         </h2>     
 
         <h2 class="text-2xl underline">
