--- a/surveys.html
+++ b/surveys.html
@@ -28,15 +28,19 @@
 
     <div id="main" class="container mx-auto">
         <h2 class="text-3xl underline">ACM Surveys</h2>
-        <div id="topics"></div>
+        <div id="acm-topics"></div>
+        <table id="acm_table" class="display"></table>
 
-        <table id="papers_table" class="display"></table>
-        <hr/>
+        <br/><hr/><br/>
+
+        <h2 class="text-3xl underline">Computer and Security</h2>
+        <div id="cas-topics"></div>
+        <table id="cas_table" class="display"></table>
 
     </div>
 
     <script type="module">
-      import {init} from "./scripts/acm-surveys.js"
+      import {init} from "./scripts/surveys.js"
 
       $(document).ready(async function () {
         await init();
