--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </li>
 
       <li class="mr-6">
-        <a class="text-blue-500 hover:text-blue-800" href="./acm-surveys.html">Surveys</a>
+        <a class="text-blue-500 hover:text-blue-800" href="./surveys.html">Surveys</a>
       </li>
       <li class="mr-6">
         <a class="text-blue-500 hover:text-blue-800" href="./tools.html">Tools</a>
@@ -45,7 +45,6 @@
       <li class="mr-6">
         <a class="text-blue-500 hover:text-blue-800" href="./bounty.html">Bounty Programs</a>
       </li>
-
       
       <li class="mr-6">
         <a class="text-blue-500 hover:text-blue-800" href="./kd.html">KD</a>
