--- a/projects/project.html
+++ b/projects/project.html
@@ -32,10 +32,25 @@
     
     <div id="main" class="container px-6">
 
+
+      <!-- ---------------------- diagrams --------------------------- -->
+
       <h2 class="text-2xl underline" id="title"></h2>
+      <br/>
+
+      <pre class="mermaid" id="modules"></pre>
+      <br/><hr/><br/>
       <pre class="mermaid" id="contracts"></pre>
+
+
       <br/><hr/><br/>
 
+
+      <!-- ---------------------- notes --------------------------- -->
+      <pre id="notes"></pre>
+      <br/><hr/><br/>
+
+      <!-- ---------------------- contract attributes --------------------------- -->
 
 
       <h2 class="text-2xl underline">source units</h2>
