--- a/recon.html
+++ b/recon.html
@@ -25,22 +25,36 @@
     <title>Viz</title>
   </head>
   <body>
-
-    
-
     <div id="main" class="container mx-auto">
-        
-
-
-
         <div>
-          reference:
-          <div>Hunting Cyber Criminals: A Hacker's Guide to Online Intelligence Gathering Tools and Techniques</div>
-        </div>
-
-        <div>
-
           <h1 class="text-2xl underline">Survey and Taxonomy of Adversarial Reconnaissance Techniques</h1>
+          <br/><br/>
+
+          <pre>
+3 RELATED LITERATURE SURVEYS
+  3.1 Surveys of Reconnaissance Techniques : OSINT, Social Engineering , Cyber Scanning , Side-channel Attacks
+  3.2 Surveys of Reconnaissance Tools
+
+4 RECONNAISSANCE TARGET INFORMATION
+  4.1 Non-Technical Information
+  4.2 Technical Information
+
+5 RECONNAISSANCE PHASES
+  5.1 External Reconnaissance
+  5.2 Internal Reconnaissance
+
+6 RECONNAISSANCE TECHNIQUES
+  6.1 Third-party Source-based Reconnaissance
+  6.2 Human-based Reconnaissance
+  6.3 System-based Reconnaissance
+
+7 CONCLUSION AND FUTURE WORK
+  7.1 Improving Adversarial Reconnaissance Models
+  7.2 Empirical Studies of Reconnaissance
+  7.3 Reconnaissance Countermeasures
+  7.4 Evolving Forms of Reconnaissance Techniques
+  
+          </pre>
 
           <img src ="https://ai2-s2-public.s3.amazonaws.com/figures/2017-08-08/08136dddf8f377ad37e96fdd302ac51969420503/15-Figure3-1.png"/>
 
@@ -50,10 +64,9 @@
 
           <br/><hr/><br/>
 
-          <pre>
-          3.1 Surveys of Reconnaissance Techniques
-          OSINT, Social Engineering , Cyber Scanning , Side-channel Attacks
-          </pre>
+          <img src="https://dl.acm.org/cms/10.1145/3538704/asset/141c2f16-2cb8-4d06-be3d-816423262c04/assets/images/medium/csur-2020-0382-f03.jpg"/>
+
+          <br/><hr/><br/>
 
         </div>          
 
