--- a/projects/project.html
+++ b/projects/project.html
@@ -40,6 +40,8 @@
 
       <pre class="mermaid" id="modules"></pre>
       <br/><hr/><br/>
+      <pre class="mermaid" id="state"></pre>
+      <br/><hr/><br/>
       <pre class="mermaid" id="contracts"></pre>
 
 
