--- a/index.html
+++ b/index.html
@@ -32,13 +32,18 @@
       <li class="mr-6">
         <a class="text-blue-500 hover:text-blue-800" href="./c4r.html">c4r</a>
       </li>
+
+      | &nbsp;&nbsp;&nbsp;
+
       <li class="mr-6">
         <a class="text-blue-500 hover:text-blue-800" href="./recon.html">Recon</a>
       </li>
-
       <li class="mr-6">
         <a class="text-blue-500 hover:text-blue-800" href="./surveys.html">Surveys</a>
       </li>
+
+      | &nbsp;&nbsp;&nbsp;
+
       <li class="mr-6">
         <a class="text-blue-500 hover:text-blue-800" href="./tools.html">Tools</a>
       </li>
@@ -88,14 +93,26 @@
 
     <br/><hr/><br/>
 
-  
+    <ul id="toc" class="bg-gray-100 rounded text-gray-800 container mx-auto">
+      <li><a href="#books">Books</a></li>
+    </ul>
+
+    <br/><hr/>
 
     <div id="main" class="container mx-auto">
 
-        <h2 class="text-2xl underline">books</h2>
+        <pre>
+          TODO:
+          * The map of red teaming
+          * Review interesting surveys
+          * review FSM in source code modeling and in general. 
+            wiki
+            modeling multi scale approach
+            state diagram 
+        </pre>
+
+        <h2 id="books" class="text-2xl underline">Books</h2>
         <table id="books_table" class="display"></table>
-
-
     </div>
 
     <script type="module">
