--- a/index.html
+++ b/index.html
@@ -39,7 +39,16 @@
         <a class="text-blue-500 hover:text-blue-800" href="./recon.html">Recon</a>
       </li>
       <li class="mr-6">
+        <a class="text-blue-500 hover:text-blue-800" href="./fuzzing.html">Fuzz</a>
+      </li>
+      <li class="mr-6">
         <a class="text-blue-500 hover:text-blue-800" href="./surveys.html">Surveys</a>
+      </li>
+
+      | &nbsp;&nbsp;&nbsp;
+
+      <li class="mr-6">
+        <a class="text-blue-500 hover:text-blue-800" href="./cps.html">CPS</a>
       </li>
 
       | &nbsp;&nbsp;&nbsp;
@@ -48,7 +57,7 @@
         <a class="text-blue-500 hover:text-blue-800" href="./tools.html">Tools</a>
       </li>
       <li class="mr-6">
-        <a class="text-blue-500 hover:text-blue-800" href="./bounty.html">Bounty Programs</a>
+        <a class="text-blue-500 hover:text-blue-800" href="./bounty.html">Bounty</a>
       </li>
       
       <li class="mr-6">
