--- a/projects.html
+++ b/projects.html
@@ -67,6 +67,12 @@
           VOOX Web - 3/29/2025
         </h2>       
 
+        <pre>
+Burve                 Mar 24, 2025, 11:00 PM -> Apr 7, 2025, 11:00 PM
+pump.fun / PumpSwap   22 Mar 2025 4:00am (local time)  -> 5 Apr 2025 4:00am (local time)
+liquity-bold          21 Mar 2025 8:00am (local time) -> 28 Apr 2025 4:00am (local time)
+        </pre>
+
 <br/><hr/><br/>
 
 
