--- a/projects/project.html
+++ b/projects/project.html
@@ -48,6 +48,14 @@
       <br/><hr/><br/>
 
 
+      <!-- ---------------------- diagrams (svg) --------------------------- -->
+
+      <br/><hr/><br/>
+      <pre class="svg-diagram" id="portfolio-factory"></pre>
+
+      <br/><hr/><br/>
+
+
       <!-- ---------------------- notes --------------------------- -->
       <pre id="notes"></pre>
       <br/><hr/><br/>
