--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
       <li class="mr-6">
         <a class="text-blue-500 hover:text-blue-800" href="./cps.html">CPS</a>
       </li>
+      <li class="mr-6">
+        <a class="text-blue-500 hover:text-blue-800" href="./sa.html">static analysis</a>
+      </li>
 
       | &nbsp;&nbsp;&nbsp;
 
