--- a/cps.html
+++ b/cps.html
@@ -36,6 +36,12 @@
       <br/><br/>
 
       <pre>
+
+  Software Systems through Complex Networks Science: Review, Analysis and Applications
+
+  https://scholar.google.com/scholar?hl=en&as_sdt=0%2C5&q=source+code+analysis+complex+networks&btnG=
+
+
   What is a complex system, after all? (2024)
   
   Complex Systems: A Survey (2011)
