--- a/projects.html
+++ b/projects.html
@@ -50,19 +50,24 @@
         </h2>     
 
         <h2 class="text-2xl underline">
-          <a href="./projects/project.html?id=2025-04-bitvault">BitVault - 4/11/2025</a>
-        </h2>
-        <h2 class="text-2xl underline">
           <a href="./projects/project.html?id=liquidity-book-vaults">liquidity-book-vaults  - 4/21/2025</a>
+        </h2>
+
+        <h2 class="text-2xl underline">
+          <a href="./projects/project.html?id=Spectra-Audit-Competition">Spectra Finance - 17 April 2025</a>
         </h2>
         
         
 
         <hr/><br/>
-        Spectra Finance   03 April 2025 - 17 April 2025<br/>
+        Kinetiq<br/>
         Burve  (Apr 9, 2025, 11:00 PM - Apr 23, 2025, 11:00 PM)
 
         <hr/><br/>
+
+        <h2 class="text-2xl underline">
+          <a href="./projects/project.html?id=2025-04-bitvault">BitVault - 4/11/2025</a>
+        </h2>
 
         <h2 class="text-2xl underline">
           <a href="./projects/project.html?id=velvet-v4">Velvet - 4/10/2025</a>
