--- a/projects/project.html
+++ b/projects/project.html
@@ -45,6 +45,15 @@
       <pre class="mermaid" id="contracts"></pre>
 
 
+      <!--TODO
+      <br/><hr/><br/>
+      <pre class="mermaid" id="m1"></pre>
+      <pre class="mermaid" id="m2"></pre>
+      <pre class="mermaid" id="m3"></pre>
+      <pre class="mermaid" id="m4"></pre>
+      <pre class="mermaid" id="m5"></pre>
+      -->
+
       <br/><hr/><br/>
 
 
