--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
       | &nbsp;&nbsp;&nbsp;
 
       <li class="mr-6">
+        <a class="text-blue-500 hover:text-blue-800" href="./lp.html">Lending Pool</a>
+      </li>
+
+      | &nbsp;&nbsp;&nbsp;
+
+      <li class="mr-6">
         <a class="text-blue-500 hover:text-blue-800" href="./recon.html">Recon</a>
       </li>
       <li class="mr-6">
