--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
       | &nbsp;&nbsp;&nbsp;
 
       <li class="mr-6">
+        <a class="text-blue-500 hover:text-blue-800" href="./complexity.html">Complexity</a>
+      </li>
+      <li class="mr-6">
         <a class="text-blue-500 hover:text-blue-800" href="./cps.html">CPS</a>
       </li>
       <li class="mr-6">
@@ -75,6 +78,10 @@
 
       <li class="mr-6">
         <a class="text-blue-500 hover:text-blue-800" href="./exchanges.html">Exchanges</a>
+      </li>
+
+      <li class="mr-6">
+        <a class="text-blue-500 hover:text-blue-800" href="./kg.html">KG</a>
       </li>
 
       <!-- <li class="mr-6">
