--- a/projects.html
+++ b/projects.html
@@ -36,6 +36,12 @@
       <div id="main" class="container px-6">
 
         <h2 class="text-2xl underline">
+          <a href="./projects/project.html?id=ignite-market">ignite market</a>
+        </h2>
+
+        <br/><hr/><br/>
+
+        <h2 class="text-2xl underline">
           <a href="./projects/project.html?id=mighty-contracts">Mighty Finance   (16 Apr 2025 1:00am - 7 May 2025 4:00am) (LOC:3207)</a>
         </h2>
         <h2 class="text-2xl underline">
