--- a/projects.html
+++ b/projects.html
@@ -39,6 +39,10 @@
           <a href="./projects/project.html?id=ignite-market">ignite market</a>
         </h2>
 
+        <h2 class="text-2xl underline">
+          <a href="./projects/project.html?id=jigsaw">Jigsaw</a>
+        </h2>
+
         <br/><hr/><br/>
 
         <h2 class="text-2xl underline">
