--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
       <li class="mr-6">
         <a class="text-blue-500 hover:text-blue-800" href="./lp.html">Lending Pool</a>
       </li>
+      <li class="mr-6">
+        <a class="text-blue-500 hover:text-blue-800" href="./pm.html">Price Manipulation</a>
+      </li>
 
       | &nbsp;&nbsp;&nbsp;
 
